--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola Git</h1>
+    <h2>CHARI</h2>
+   
     <h2>FER</h2>
     <p>ESTO ES UNA PRUEBA</p>
     </body>
