--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Caro</h2>
+    <h2>Carolina Almaraz</h2>
     <h1>Hola Git</h1>
     <h2>FER</h2>
     <p>ESTO ES UNA PRUEBA</p>
