--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Elena Benalcázar</h2>
     <h2>Carolina Almaraz</h2>
     <h2>FDV</h2>
-  </head>
-  <body>
     <h2>CHARI</h2>
 
     <h2>Mack</h2>
