--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Carolina Almaraz</h2>
     <h2>FDV</h2>
     <h2>CHARI</h2>
-
+    <p>Esto es una prueba</p>
     <h2>Mack</h2>
     <h2>Mack</h2>
     <h2>Mack</h2>
